1659988523 (Mon Aug 08 2022 21:55:23 GMT+0200 (Central European Summer Time))
Minor changes.

1659987439 (Mon Aug 08 2022 21:37:19 GMT+0200 (Central European Summer Time))
Forgot to update changelog. Also fixed*.

1659987393 (Mon Aug 08 2022 21:36:33 GMT+0200 (Central European Summer Time))
Standarized function names. Added addTagFiles. Updated DOC and fixes bugs

1659879571 (Sun Aug 07 2022 15:39:31 GMT+0200 (Central European Summer Time))
Added removing things from db. Ref counts update when removing things. Added changelog.

1659832822 (Sun Aug 07 2022 02:40:22 GMT+0200 (Central European Summer Time))
Created changelog