@@ -12,6 +12,10 @@ char *normalizeStr(const char *str, uint32_t *ln);
 
 char *normalizeStrLimit(const char *str, uint32_t *l, uint32_t limit);
 
+char *trimStr(const char *str, uint32_t *l);
+
+char *trimStrLimit(const char *str, uint32_t *l, uint32_t limit);
+
 ssize_t strInTags(const char *tags, int n, const char *ndl, int m, char sep); 
 
 #endif
