@@ -1,3 +1,6 @@
+1660003394 (Tue Aug 09 2022 02:03:14 GMT+0200 (Central European Summer Time))
+Improved database name system.
+
 1659988523 (Mon Aug 08 2022 21:55:23 GMT+0200 (Central European Summer Time))
 Minor changes.
 
